objects/pse__Revenue_Forecast_Type__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastTypeHelp</customHelpPage>
    <description>Stores the revenue forecast for a relevant object, for example Milestone or Est Vs Actuals.</description>
    <fields>
        <fullName>pse__Actuals__c</fullName>
        <description>Contains the combined value of the Revenue Recognized to Date and the Revenue Pending Recognition fields.</description>
        <formula>pse__Revenue_Recognized_To_Date__c  +  pse__Revenue_Pending_Recognition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contains the combined value of the Revenue Recognized to Date and the Revenue Pending Recognition fields.</inlineHelpText>
        <label>Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Actuals__c</fullName>
        <description>Contains the combined value of the Corp: Revenue Recognized to Date and the Corp: Revenue Pending Recognition fields.</description>
        <formula>pse__Corp_Revenue_Recognized_To_Date__c + pse__Corp_Revenue_Pending_Recognition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contains the combined value of the Corp: Revenue Recognized to Date and the Corp: Revenue Pending Recognition fields.</inlineHelpText>
        <label>Corp: Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Currency__c</fullName>
        <description>The corporate currency of the org at the time the revenue forecast was run.</description>
        <inlineHelpText>The corporate currency of the org at the time the revenue forecast was run.</inlineHelpText>
        <label>Corp: Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Revenue_Pending_Recognition__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In the corporate currency, the revenue that is ready for recognition on this revenue forecast.</description>
        <inlineHelpText>In the corporate currency, the revenue that is ready for recognition on this revenue forecast.</inlineHelpText>
        <label>Corp: Revenue Pending Recognition</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Revenue_Recognized_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In the corporate currency, the revenue that has already been recognized on this revenue forecast.</description>
        <inlineHelpText>In the corporate currency, the revenue that has already been recognized on this revenue forecast.</inlineHelpText>
        <label>Corp: Revenue Recognized to Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Scheduled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In the corporate currency, the revenue that is scheduled for recognition on this revenue forecast.</description>
        <inlineHelpText>In the corporate currency, the revenue that is scheduled for recognition on this revenue forecast.</inlineHelpText>
        <label>Corp: Scheduled Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Unscheduled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In the corporate currency, revenue that is currently unscheduled. If there are months that do not contain any scheduled or actual revenue, the unscheduled revenue is spread evenly across those months, except for empty months that fall between months containing scheduled or actual revenue.</description>
        <inlineHelpText>In the corporate currency, revenue that is currently unscheduled.</inlineHelpText>
        <label>Corp: Unscheduled Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the milestone this revenue forecast type relates to.</description>
        <inlineHelpText>Lookup to the milestone this revenue forecast type relates to.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Revenue Forecast Types</relationshipLabel>
        <relationshipName>Revenue_Forecast_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity this revenue forecast type relates to.</description>
        <inlineHelpText>Lookup to the opportunity this revenue forecast type relates to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Forecast Types</relationshipLabel>
        <relationshipName>Revenue_Forecast_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the project this revenue forecast type relates to.</description>
        <inlineHelpText>Lookup to the project this revenue forecast type relates to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Revenue Forecast Types</relationshipLabel>
        <relationshipName>Revenue_Forecast_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast__c</fullName>
        <description>Lookup to the relevant revenue forecast.</description>
        <inlineHelpText>Lookup to the relevant revenue forecast.</inlineHelpText>
        <label>Revenue Forecast</label>
        <referenceTo>pse__Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Revenue Forecast Types</relationshipLabel>
        <relationshipName>Revenue_Forecast_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Pending_Recognition__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The revenue that is ready for recognition on this revenue forecast.</description>
        <inlineHelpText>The revenue that is ready for recognition on this revenue forecast.</inlineHelpText>
        <label>Revenue Pending Recognition</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Recognized_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The revenue that has already been recognized on this revenue forecast.</description>
        <inlineHelpText>The revenue that has already been recognized on this revenue forecast.</inlineHelpText>
        <label>Revenue Recognized to Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Source__c</fullName>
        <description>Indicates the source of the revenue for this record.</description>
        <inlineHelpText>Indicates the source of the revenue for this record.</inlineHelpText>
        <label>Revenue Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliverable: Milestone</fullName>
                </value>
                <value>
                    <fullName>Deliverable: Expense</fullName>
                </value>
                <value>
                    <fullName>Deliverable: Timecard</fullName>
                </value>
                <value>
                    <fullName>Deliverable: Miscellaneous Adjustment</fullName>
                </value>
                <value>
                    <fullName>Deliverable: EVA</fullName>
                </value>
                <value>
                    <fullName>% Complete: Project</fullName>
                </value>
                <value>
                    <fullName>% Complete: Milestone</fullName>
                </value>
                <value>
                    <fullName>Equal Split: Project</fullName>
                </value>
                <value>
                    <fullName>Equal Split: Milestone</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Revenue_Type__c</fullName>
        <description>Indicates whether the values in this record apply to actual or forecast revenue.</description>
        <inlineHelpText>Indicates whether the values in this record apply to actual or forecast revenue.</inlineHelpText>
        <label>Revenue Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The revenue that is scheduled for recognition on this revenue forecast.</description>
        <inlineHelpText>The revenue that is scheduled for recognition on this revenue forecast.</inlineHelpText>
        <label>Scheduled Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Revenue that is currently unscheduled.</description>
        <inlineHelpText>If there are months that do not contain any scheduled or actual revenue, the unscheduled revenue is spread evenly across those months, except for empty months that fall between months containing scheduled or actual revenue.</inlineHelpText>
        <label>Unscheduled Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Forecast Type</label>
    <nameField>
        <displayFormat>RFT-{00000000}</displayFormat>
        <label>Revenue Forecast Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>